# product-ontime-analysis

./: .env.example  .gitignore  .replit  000index.md  000index1.md  000index2.md  000index3.md  000index4.md  000index5.md  001_Entry_Point_Kane_Ragas.py  001_Entry_Point_Kane_Ragas_Demo.py  002_Entry_Point_Kane_Tavily.py  003_Entry_Point_Kane_Tavily_Enhanced.py  004_Entry_Point_Kane_Complete_RAG.py  005_Entry_Point_Kane_LangSmith.py  006_Entry_Point_Kane_AB_Testing.py  007_Entry_Point_Ambient_Agents.py  008_Entry_Point_Acad_LC_Start1.py  009_Entry_Point_Acad_LC_Eval2.py  010_Entry_Point_Custom_Tools.py  011_Entry_Point_LangGraph_Base.py  011_Entry_Point_XRunner.py  012_Entry_Point_StateGraph_Pattern.py  014_Entry_Point_Official_Manufacturing_Assistant.py  015_Entry_Point_Manufacturing_Queue_Router.py  016_Entry_Point_Manufacturing_Configuration.py  017_Entry_Point_Manufacturing_Ambient.py  017_Entry_Point_Manufacturing_Plant_Ingest.py  018_Entry_Point_Persist_Graph.py  018_Entry_Point_Structured_RAG_Graph.py  019_Entry_Point_NetworkX_Graph_Patterns.py  019_Entry_Point_Persist_Graph.py  020_ArangoDB_Usage_Examples.md  020_Entry_Point_ArangoDB_Graph_Persistence.py  020_Entry_Point_Persist_2nd_NetworkX_Arango.py  020_Entry_Point_Persist_3rd_NetworkX_Arango.py  020_Entry_Point_Persist_NetworkX_Arango.py  021_Entry_Point_Excel_Data_Cleansing.py  022_Entry_Point_Document_Segmentation.py  023_Entry_Point_Combined_Pipeline.py  (+233 more)
.agents/: agent_assets_metadata.toml  filesystem.yaml  sqlmesh.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  verify_parity.py
(+2502 files in other folders)
